[project]
name = "write-around"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.7",
    "locust>=2.43.2",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.32",
]
